SFDC DevOps Test/src/objects/Test_Execution__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents the execution of a test script in a specific case.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments on the test execution</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <description>Date of test execution</description>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Type__c</fullName>
        <description>Type of test execution</description>
        <label>Execution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unit Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>Result of test execution</description>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <description>Test case for the test execution</description>
        <label>Test Case</label>
        <referenceTo>Test_Case__c</referenceTo>
        <relationshipLabel>Test Executions</relationshipLabel>
        <relationshipName>Test_Executions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Execution</label>
    <nameField>
        <displayFormat>TestExecution-{0000000000}</displayFormat>
        <label>Test Execution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>